--- a/DartsApp/app/src/main/AndroidManifest.xml
+++ b/DartsApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".StatsActivity"></activity>
+        <activity android:name=".EndGameActivity"></activity>
+        <activity android:name=".StatsActivity" />
         <activity android:name=".GameActivity" />
         <activity android:name=".HistoryActivity" />
         <activity android:name=".MainActivity">
