--- a/DartsApp/app/src/main/AndroidManifest.xml
+++ b/DartsApp/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".EndGameActivity"></activity>
         <activity
+            android:theme="@style/AppTheme"
             android:name=".StatsActivity"
             android:label="@string/title_activity_stats"
             />
